refactor: Version upgrade
Java 15